HelloUltraviolet/Fixtures/RejectedSource/Procedures/ReturnAnnotationPresence/Expected.uv
//! Expected diagnostic metadata for the ReturnAnnotationPresence rejected-source specimen.

expectedDiagnostic("", "def.15.ReturnAnnOk")
